--- a/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
+++ b/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   jenkins:
-    image: jenkinsci/blueocean
+    image: jenkins/jenkins:jdk17
     ports:
       - "8080:8080"
       - "50000:50000"
