--- a/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
+++ b/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
@@ -1,8 +1,9 @@
-version: '3'
-
 services:
   jenkins:
-    image: jenkins/jenkins:jdk17
+    build:
+      context: .
+      dockerfile: Dockerfile.jenkins
+    container_name: jenkins-tflocal
     ports:
       - "8080:8080"
       - "50000:50000"
