--- a/devops/challenges/jenkins-spring-ec2/Dockerfile.jenkins
+++ b/devops/challenges/jenkins-spring-ec2/Dockerfile.jenkins
@@ -21,4 +21,11 @@ RUN  rm -rf /var/lib/apt/lists/*
 
 USER jenkins
 
+RUN aws configure set aws_access_key_id test && \
+    aws configure set aws_secret_access_key test && \
+    aws configure set region us-east-1 && \
+    aws configure set output json
+
+ENV AWS_ENDPOINT_URL=http://localstack:4566
+
 CMD ["/usr/bin/tini", "--", "/usr/local/bin/jenkins.sh"]
