--- a/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
+++ b/devops/challenges/jenkins-spring-ec2/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - "50000:50000"
     volumes:
       - "jenkins-data:/var/jenkins_home"
+    # environment:
+    #   - JAVA_OPTS=-Xmx500m
+    # mem_limit: 1000m
   
   localstack:
     image: localstack/localstack
