--- a/devops/challenges/jenkins-spring-helm/helm/spring-web-3-j21/templates/deployment.yaml
+++ b/devops/challenges/jenkins-spring-helm/helm/spring-web-3-j21/templates/deployment.yaml
@@ -28,7 +28,17 @@ spec:
             httpGet:
               path: /actuator/health
               port: http
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+            successThreshold: 2
           readinessProbe:
             httpGet:
               path: /actuator/health
-              port: http 
+              port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+            successThreshold: 2
