--- a/samples/java/spring-web-3-j21/Dockerfile
+++ b/samples/java/spring-web-3-j21/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY build/libs/*.jar app.jar
 
+LABEL org.opencontainers.image.source=https://github.com/alex-carvalho/sandbox
+
 EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
