--- a/samples/java/spring-web-3-j21/src/main/resources/application.properties
+++ b/samples/java/spring-web-3-j21/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=demo
+
+management.endpoints.web.exposure.include=health,metrics,prometheus
+management.metrics.export.prometheus.enabled=true
