--- a/devops/challenges/docker-compose-prometheus-elk/docker-compose.yaml
+++ b/devops/challenges/docker-compose-prometheus-elk/docker-compose.yaml
@@ -1,12 +1,8 @@
-version: '3.8'
-
 services:
   java-app:
     image: ghcr.io/alex-carvalho/sandbox/spring-web-3-j21:latest
-    container_name: java-app
-    # command: ["java", "-jar", "app.jar"]
     environment:
-      - LOGSTASH_URL=logback:5044
+      - LOGSTASH_URL=logstash:5044
     ports:
       - "8080:8080"
     networks:
@@ -14,7 +10,6 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
     volumes:
       - ./prometheus:/etc/prometheus
     command:
@@ -26,9 +21,9 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
-    container_name: elasticsearch
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -37,7 +32,6 @@ services:
 
   logstash:
     image: docker.elastic.co/logstash/logstash:8.9.0
-    container_name: logstash
     volumes:
       - ./logstash:/usr/share/logstash/pipeline
     ports:
@@ -47,13 +41,14 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.9.0
-    container_name: kibana
     ports:
       - "5601:5601"
     networks:
       - app-network
     depends_on:
       - elasticsearch
+    volumes:
+    - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
 
 networks:
   app-network:
