--- a/devops/challenges/docker-compose-prometheus-elk/logstash/logstash.conf
+++ b/devops/challenges/docker-compose-prometheus-elk/logstash/logstash.conf
@@ -1,11 +1,14 @@
 input {
-  beats {
+  tcp {
     port => 5044
+    # codec => json
   }
 }
+
 
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
+    index => "java-logs-%{+YYYY.MM.dd}"
   }
 }
