--- a/devops/challenges/docker-compose-prometheus-elk/docker-compose.yaml
+++ b/devops/challenges/docker-compose-prometheus-elk/docker-compose.yaml
@@ -21,7 +21,9 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+    container_name: elasticsearch
     environment:
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
       - discovery.type=single-node
       - xpack.security.enabled=false
     ports:
@@ -32,19 +34,24 @@ services:
 
   logstash:
     image: docker.elastic.co/logstash/logstash:8.9.0
+    container_name: logstash
     volumes:
       - ./logstash:/usr/share/logstash/pipeline
     ports:
-      - "5044:5044"
+      - 5044:5044
     networks:
       - app-network
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.9.0
+    container_name: kibana
     ports:
-      - "5601:5601"
+      - 9600:9600
+      - 5601:5601
     networks:
       - app-network
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
     depends_on:
       - elasticsearch
     volumes:
