--- a/devops/challenges/docker-compose-prometheus-elk/prometheus/prometheus.yml
+++ b/devops/challenges/docker-compose-prometheus-elk/prometheus/prometheus.yml
@@ -3,5 +3,6 @@ global:
 
 scrape_configs:
   - job_name: 'java-app'
+    metrics_path: /actuator/prometheus
     static_configs:
       - targets: ['java-app:8080']
