--- a/devops/challenges/opentofu-k8s-deploy/Jenkinsfile
+++ b/devops/challenges/opentofu-k8s-deploy/Jenkinsfile
@@ -66,7 +66,7 @@ pipeline {
         stage('Deploy Helm Chart') {
             steps {
                 dir("devops/challenges/opentofu-k8s-deploy/helm/app") {
-                    sh 'helm upgrade --install java-app .'
+                    sh "helm upgrade --install java-app --set image.tag=$BUILD_NUMBER ."
                 }
             }
         }
