--- a/devops/challenges/opentofu-k8s-deploy/helm/app/templates/service.yaml
+++ b/devops/challenges/opentofu-k8s-deploy/helm/app/templates/service.yaml
@@ -5,6 +5,10 @@ metadata:
   name: {{ .Chart.Name }}
   labels:
     app: {{ .Chart.Name }}
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8080"
+    prometheus.io/path: "/actuator/prometheus"
 spec:
   type: {{ .Values.service.type }}
   ports:
