--- a/devops/gitops/argocd/examples/guestbook-application.yaml
+++ b/devops/gitops/argocd/examples/guestbook-application.yaml
@@ -14,5 +14,5 @@ spec:
     namespace: apps
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
