--- a/devops/gitops/argocd/examples/sync-phases-waves/manifests/pre-sync-job.yml
+++ b/devops/gitops/argocd/examples/sync-phases-waves/manifests/pre-sync-job.yml
@@ -4,7 +4,7 @@ metadata:
   name: my-pre-sync-job
   annotations:
     argocd.argoproj.io/hook: PreSync
-    # argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
