--- a/devops/challenges/opentofu-k8s-deploy/infra/jenkins-values.yaml
+++ b/devops/challenges/opentofu-k8s-deploy/infra/jenkins-values.yaml
@@ -1,4 +1,5 @@
 controller:
+  serviceAccount: jenkins-sa
   installPlugins:
     - kubernetes
     - workflow-aggregator
@@ -22,9 +23,29 @@ controller:
     limits:
       cpu: 1
       memory: 2Gi
+  additionalExistingSecrets:
+    - name: jenkins-ghcr-secret
+      keyName: username
+    - name: jenkins-ghcr-secret
+      keyName: token
   JCasC:
     enabled: true
+    configScripts:
+      jenkins-casc-configs: |
+        credentials:
+          system:
+            domainCredentials:
+              - credentials:
+                - usernamePassword:
+                    scope: GLOBAL
+                    id: "ghcr-creds"
+                    username: "${jenkins-ghcr-secret-username}"
+                    password: "${jenkins-ghcr-secret-token}"
+                    description: "GitHub Container Registry credentials"
 agent:
+  podName: jenkins-agent
+  namespace: infra
+  serviceAccount: jenkins-sa
   enabled: true
   runAsUser: 0
   image:
