--- a/samples/java/dungeon-game/docker-compose.yml
+++ b/samples/java/dungeon-game/docker-compose.yml
@@ -2,22 +2,24 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13
+    image: postgres
+    restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dungeon_game
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=dungeon
     ports:
-      - "5432:5432"
+      - '5432:5432'
 
   app:
     build: .
-    ports:
-      - "8080:8080"
+    restart: on-failure
     depends_on:
       - db
+    ports:
+      - '8080:8080'
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/dungeon_game
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: password
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/dungeon
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
