--- a/samples/java/dungeon-game/pom.xml
+++ b/samples/java/dungeon-game/pom.xml
@@ -8,7 +8,7 @@
         <version>3.3.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.ac</groupId>
     <artifactId>dungeon-game</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>dungeon-game</name>
@@ -26,10 +26,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <scope>test</scope>
+            <!-- <scope>test</scope> -->
         </dependency>
     </dependencies>
 
