--- a/samples/java/dungeon-game/src/main/resources/application.properties
+++ b/samples/java/dungeon-game/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dungeon_game
-spring.datasource.username=user
+# spring.datasource.url=jdbc:postgresql://localhost:5432/dungeon_game
+# spring.datasource.username=user
+# spring.datasource.password=password
+# spring.jpa.hibernate.ddl-auto=update
+
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
