--- a/samples/go/voting-arch/kafka-redis-consumer/Dockerfile
+++ b/samples/go/voting-arch/kafka-redis-consumer/Dockerfile
@@ -1,14 +1,23 @@
-FROM golang:1.25-alpine AS builder
+FROM golang:latest AS builder
 
 WORKDIR /app
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    librdkafka-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o kafka-redis-consumer ./cmd/main
+RUN go build -o kafka-redis-consumer ./cmd/main
 
-FROM alpine:latest
+FROM debian:bookworm-slim
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    librdkafka1 \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root/
 COPY --from=builder /app/kafka-redis-consumer .
