--- a/devops/observability/elastic/java-app/Dockerfile
+++ b/devops/observability/elastic/java-app/Dockerfile
@@ -20,13 +20,14 @@ RUN mkdir -p /app/logs && chmod 777 /app/logs
 
 EXPOSE 8080
 
+ENV ELASTIC_APM_SERVER_URLS=http://apm-server:8200
+ENV ELASTIC_APM_SERVICE_NAME=elastic-stack-demo
+ENV ELASTIC_APM_ENVIRONMENT=testing
+
 ENTRYPOINT ["java", \
     "-javaagent:/app/apm-agent.jar", \
-    "-Delastic.apm.service_name=elastic-stack-demo", \
-    "-Delastic.apm.server_urls=http://apm-server:8200", \
-    "-Delastic.apm.environment=testing", \
     "-Delastic.apm.transaction_sample_rate=1.0", \
-    "-Delastic.apm.log_correlation=true", \
+    "-Delastic.apm.log_ecs_reformatting=SHADE", \
     "-Dspring.profiles.active=docker", \
     "-Dlogging.file.name=/app/logs/app.log", \
     "-jar", \
