--- a/devops/observability/elastic/java-app/deployment.yaml
+++ b/devops/observability/elastic/java-app/deployment.yaml
@@ -1,25 +1,8 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: apm
-  namespace: elastic
-  labels:
-    app: elastic-agent
-spec:
-  type: ClusterIP
-  ports:
-    - port: 8200
-      targetPort: 8200
-      protocol: TCP
-      name: apm
-  selector:
-    agent.k8s.elastic.co/name: elastic-agent
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: java-app
-  namespace: elastic
+  namespace: apps
   labels:
     app: java-app
 spec:
@@ -36,6 +19,10 @@ spec:
         co.elastic.logs/json.keys_under_root: "true"
         co.elastic.logs/json.overwrite_keys: "true"
         co.elastic.logs/json.add_error_key: "true"
+        co.elastic.logs/json.message_key: "message"
+        co.elastic.logs/processors.decode_json_fields.fields: "message"
+        co.elastic.logs/processors.decode_json_fields.target: ""
+        co.elastic.logs/processors.decode_json_fields.overwrite_keys: "true"
     spec:
       containers:
         - name: java-app
@@ -56,7 +43,7 @@ spec:
             - name: ELASTIC_APM_CENTRAL_CONFIG
               value: "true"
             - name: ELASTIC_APM_LOG_SENDING
-              value: "true"
+              value: "false"
             - name: ELASTIC_APM_SECRET_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -87,7 +74,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: java-app
-  namespace: elastic
+  namespace: apps
   labels:
     app: java-app
 spec:
