--- a/devops/observability/elastic/java-app/deployment.yaml
+++ b/devops/observability/elastic/java-app/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - name: ELASTIC_APM_SERVER_URLS
               value: "http://apm.elastic.svc:8200"
             - name: ELASTIC_APM_SERVICE_NAME
-              value: "elastic-stack-demo"
+              value: "java-app"
             - name: ELASTIC_APM_ENVIRONMENT
               value: "kubernetes"
             - name: ELASTIC_APM_CENTRAL_CONFIG
