--- a/devops/observability/elastic/k8s/elasticsearch.yaml
+++ b/devops/observability/elastic/k8s/elasticsearch.yaml
@@ -2,8 +2,9 @@ apiVersion: elasticsearch.k8s.elastic.co/v1
 kind: Elasticsearch
 metadata:
   name: elasticsearch-sample
+  namespace: elastic
 spec:
-  version: "8.11.0"
+  version: 9.2.0
   nodeSets:
   - name: default
     count: 1
