--- a/devops/observability/elastic/k8s/fleet-server.yaml
+++ b/devops/observability/elastic/k8s/fleet-server.yaml
@@ -2,8 +2,9 @@ apiVersion: agent.k8s.elastic.co/v1alpha1
 kind: Agent
 metadata:
   name: fleet-server
+  namespace: elastic
 spec:
-  version: "8.11.0"
+  version: 9.2.0
   kibanaRef:
     name: kibana-sample
   elasticsearchRefs:
