--- a/devops/ansible/variables/playbooks/apache.yml
+++ b/devops/ansible/variables/playbooks/apache.yml
@@ -2,6 +2,9 @@
 - name: Setup Apache Web Server with Variable-based Configuration
   hosts: webservers
   become: yes
+  vars:
+    apache_port: 80
+    document_root: /var/www/html
 
   tasks:
     - name: Update package cache
@@ -21,7 +24,7 @@
     - name: Copy index.html to web server
       template:
         src: /etc/ansible/assets/index.html
-        dest: /var/www/html/index.html
+        dest: "{{ document_root }}/index.html"
         mode: '0644'
 
     - name: Restart Apache2
