--- a/devops/ansible/variables/docker-compose.yml
+++ b/devops/ansible/variables/docker-compose.yml
@@ -22,28 +22,26 @@ services:
       - node2
 
   node1:
-    image: ubuntu:26.04
+    image: ansible-node
+    build:
+      context: ../shared/node
     container_name: node1
     hostname: node1
     networks:
       - ansible-net
     ports:
       - "8001:80"
-    environment:
-      - DEBIAN_FRONTEND=noninteractive
-    command: /bin/bash -c "apt-get update && apt-get install -y openssh-server sudo python3 curl && echo 'root:testpass' | chpasswd && sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config && mkdir -p /run/sshd && /usr/sbin/sshd -D"
 
   node2:
-    image: ubuntu:26.04
+    image: ansible-node
+    build:
+      context: ../shared/node
     container_name: node2
     hostname: node2
     networks:
       - ansible-net
     ports:
       - "8002:80"
-    environment:
-      - DEBIAN_FRONTEND=noninteractive
-    command: /bin/bash -c "apt-get update && apt-get install -y openssh-server sudo python3 curl && echo 'root:testpass' | chpasswd && sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config && mkdir -p /run/sshd && /usr/sbin/sshd -D"
 
 networks:
   ansible-net:
