--- a/devops/ansible/shared/master/Dockerfile
+++ b/devops/ansible/shared/master/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:24.04
+FROM ubuntu:26.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -7,9 +7,13 @@ RUN apt-get update && apt-get install -y \
     openssh-client \
     sshpass \
     python3 \
+    python3-pip \
+    sudo \
     && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /etc/ansible/playbooks
+RUN mkdir -p /etc/ansible/playbooks \
+             /etc/ansible/host_vars \
+             /etc/ansible/roles
 
 WORKDIR /etc/ansible
 
