--- a/devops/ansible/collections/Makefile
+++ b/devops/ansible/collections/Makefile
@@ -16,3 +16,13 @@ run:
 
 list:
 	docker exec ansible-master ansible-galaxy collection list
+
+check:
+	@echo "=== node1 (https://localhost:8443) ==="
+	@curl -sk -o /dev/null -w "HTTP status: %{http_code}\n" https://localhost:8443
+	@curl -sk --cert-status -w "SSL: %{ssl_verify_result} | Cert expires: %{ssl_cert_expire}\n" https://localhost:8443 -o /dev/null 2>/dev/null || \
+		openssl s_client -connect localhost:8443 -servername node1 </dev/null 2>/dev/null | openssl x509 -noout -subject -dates
+	@echo "=== node2 (https://localhost:8444) ==="
+	@curl -sk -o /dev/null -w "HTTP status: %{http_code}\n" https://localhost:8444
+	@curl -sk --cert-status -w "SSL: %{ssl_verify_result} | Cert expires: %{ssl_cert_expire}\n" https://localhost:8444 -o /dev/null 2>/dev/null || \
+		openssl s_client -connect localhost:8444 -servername node2 </dev/null 2>/dev/null | openssl x509 -noout -subject -dates
