--- a/devops/ansible/collections/requirements.yml
+++ b/devops/ansible/collections/requirements.yml
@@ -1,5 +1,4 @@
 ---
 collections:
-  - name: community.general
-    version: ">=8.0.0"
-  - name: ansible.posix
+  - name: community.crypto
+    version: ">=2.0.0"
